# core/state_manager.py
from enum import Enum, auto
from typing import Dict, Any, Optional, List, Callable
import time
import time

from utils.debug_helper import debug_log
from core.working_context import ContextType

class UEPState(Enum):
    IDLE      = "idle"  # 閒置
    CHAT      = "chat"  # 聊天
    WORK      = "work"  # 工作（執行指令，包含單步和多步驟工作流程）
    MISCHIEF  = "mischief"  # 搗蛋（暫略）
    SLEEP     = "sleep"  # 睡眠（暫略）
    ERROR     = "error"  # 錯誤

class StateManager:
    """
    管理 U.E.P 各種狀態。
    接受事件，並在需要時切換 state。
    負責根據狀態變化創建對應的會話。
    """

    def __init__(self):
        self._state = UEPState.IDLE
        self._current_session_id: Optional[str] = None
        self._state_change_callbacks: List[Callable[[UEPState, UEPState], None]] = []
        
        # 與 StatusManager 整合
        self._setup_status_integration()
        
    def get_state(self) -> UEPState:
        return self._state
    
    def get_current_state(self) -> UEPState:
        """獲取當前狀態（與 get_state 相同，提供兼容性）"""
        return self._state

    def set_state(self, new_state: UEPState, context: Optional[Dict[str, Any]] = None):
        """
        設置新狀態，並觸發狀態變化處理
        
        Args:
            new_state: 新狀態
            context: 狀態變化上下文 (包含創建會話所需的資訊)
        """
        old_state = self._state
        if old_state == new_state:
            return  # 狀態沒有變化
            
        self._state = new_state
        debug_log(2, f"[StateManager] 狀態變更: {old_state.name} -> {new_state.name}")
        
        # 觸發狀態變化回調
        self._on_state_changed(old_state, new_state, context)
        
        # 通知所有回調
        for callback in self._state_change_callbacks:
            try:
                callback(old_state, new_state)
            except Exception as e:
                debug_log(1, f"[StateManager] 狀態變化回調執行失敗: {e}")
    
    def add_state_change_callback(self, callback: Callable[[UEPState, UEPState], None]):
        """添加狀態變化回調"""
        self._state_change_callbacks.append(callback)
        
    def get_current_session_id(self) -> Optional[str]:
        """獲取當前會話ID"""
        return self._current_session_id
        
    def _on_state_changed(self, old_state: UEPState, new_state: UEPState, context: Optional[Dict[str, Any]] = None):
        """
        處理狀態變化，創建對應的會話
        
        Args:
            old_state: 舊狀態
            new_state: 新狀態
            context: 狀態變化上下文
        """
        try:
            # 根據新狀態創建對應的會話或執行特殊處理
            if new_state == UEPState.CHAT:
                self._create_chat_session(context)
            elif new_state == UEPState.WORK:
                self._create_work_session(context)
            elif new_state == UEPState.IDLE:
                self._cleanup_sessions()
            elif new_state == UEPState.MISCHIEF:
                self._handle_mischief_state(context)
            elif new_state == UEPState.SLEEP:
                self._handle_sleep_state(context)
                
        except Exception as e:
            debug_log(1, f"[StateManager] 狀態變化處理失敗: {e}")
    
    def _create_chat_session(self, context: Optional[Dict[str, Any]] = None):
        """創建聊天會話"""
        try:
            from core.chatting_session import chatting_session_manager
            from core.working_context import working_context_manager
            
            # 從 Working Context 獲取身份信息
            identity_context = working_context_manager.get_data(ContextType.IDENTITY_MANAGEMENT, "identity_context", {})
            if not identity_context:
                # 如果沒有身份信息，使用默認值
                identity_context = {
                    "user_id": "default_user",
                    "personality": "default",
                    "preferences": {}
                }
            
            # 創建 Chatting Session
            gs_session_id = f"gs_{int(time.time())}"
            cs = chatting_session_manager.create_session(
                gs_session_id=gs_session_id,
                identity_context=identity_context
            )
            
            if cs:
                self._current_session_id = cs.session_id
                debug_log(2, f"[StateManager] 創建聊天會話成功: {cs.session_id}")
                
                # 如果有初始輸入，處理它
                if context and context.get("initial_input"):
                    response = cs.process_input(context["initial_input"])
                    debug_log(3, f"[StateManager] 處理初始輸入完成: {cs.session_id}")
            else:
                debug_log(1, "[StateManager] 創建聊天會話失敗")
                
        except Exception as e:
            debug_log(1, f"[StateManager] 創建聊天會話時發生錯誤: {e}")
    
    def _create_work_session(self, context: Optional[Dict[str, Any]] = None):
        """創建工作會話"""
        try:
            from core.session_manager import session_manager
            
            # 從上下文獲取工作流程信息
            workflow_type = "single_command"
            command = "unknown command"
            
            if context:
                workflow_type = context.get("workflow_type", workflow_type)
                command = context.get("command", command)
            
            # 創建 Workflow Session
            ws = session_manager.create_session(
                workflow_type=workflow_type,
                command=command,
                initial_data=context
            )
            
            if ws:
                self._current_session_id = ws.session_id
                debug_log(2, f"[StateManager] 創建工作會話成功: {ws.session_id} (類型: {workflow_type})")
            else:
                debug_log(1, "[StateManager] 創建工作會話失敗")
                
        except Exception as e:
            debug_log(1, f"[StateManager] 創建工作會話時發生錯誤: {e}")
    
    def _cleanup_sessions(self):
        """清理會話 (當回到IDLE狀態時)"""
        # 這裡可以添加會話清理邏輯
        # 目前只是清除當前會話ID引用
        self._current_session_id = None
        debug_log(3, "[StateManager] 清理會話引用")
    
    def _handle_mischief_state(self, context: Optional[Dict[str, Any]] = None):
        """
        處理 Mischief 狀態 - 搗蛋狀態
        
        特點：
        - 不創建會話
        - 系統進入自主活動模式
        - 由 Mood 和其他數值觸發
        - 會影響 Helpfulness (設為 -1)
        """
        try:
            debug_log(1, "[StateManager] 進入 Mischief 狀態 - 系統將進行自主活動")
            
            # 取消當前會話（Mischief 不需要會話）
            self._cleanup_sessions()
            
            # 更新系統數值 - Mischief 狀態時 Helpfulness 為負值
            self._update_status_for_mischief()
            
            # 觸發 Mischief 狀態的特殊行為
            self._trigger_mischief_behaviors(context)
            
        except Exception as e:
            debug_log(1, f"[StateManager] 處理 Mischief 狀態失敗: {e}")
    
    def _handle_sleep_state(self, context: Optional[Dict[str, Any]] = None):
        """
        處理 Sleep 狀態 - 休眠狀態
        
        特點：
        - 不創建會話
        - 系統資源釋放
        - 由 Boredom 數值觸發
        - 降低系統活動度
        """
        try:
            debug_log(1, "[StateManager] 進入 Sleep 狀態 - 系統準備休眠")
            
            # 取消當前會話（Sleep 不需要會話）
            self._cleanup_sessions()
            
            # 執行資源釋放操作
            self._prepare_system_sleep(context)
            
            # 降低系統活動度
            self._reduce_system_activity()
            
        except Exception as e:
            debug_log(1, f"[StateManager] 處理 Sleep 狀態失敗: {e}")
        
    def sync_with_sessions(self):
        """
        與會話管理器同步狀態
        
        檢查活躍的會話並設置對應的系統狀態：
        - 有活躍的工作會話 -> WORK
        - 有活躍的聊天會話 -> CHAT  
        - 沒有活躍會話 -> IDLE
        """
        try:
            # 延遲導入避免循環依賴
            from core.session_manager import session_manager
            from core.chatting_session import chatting_session_manager
            
            # 檢查工作會話
            active_work_sessions = session_manager.get_active_sessions() if session_manager else []
            
            # 檢查聊天會話
            active_chat_sessions = chatting_session_manager.get_active_sessions() if chatting_session_manager else []
            
            if active_work_sessions:
                # 有活躍的工作會話
                if self._state != UEPState.WORK:
                    debug_log(2, f"[StateManager] 同步狀態為 WORK (活躍會話數: {len(active_work_sessions)})")
                    self._state = UEPState.WORK
            elif active_chat_sessions:
                # 有活躍的聊天會話
                if self._state != UEPState.CHAT:
                    debug_log(2, f"[StateManager] 同步狀態為 CHAT (活躍會話數: {len(active_chat_sessions)})")
                    self._state = UEPState.CHAT
            else:
                # 沒有活躍會話
                if self._state != UEPState.IDLE:
                    debug_log(2, "[StateManager] 同步狀態為 IDLE")
                    self._state = UEPState.IDLE
                    
        except ImportError as e:
            debug_log(2, f"[StateManager] 無法同步會話狀態: {e}")
        except Exception as e:
            debug_log(2, f"[StateManager] 同步會話狀態時發生錯誤: {e}")
    
    def check_special_state_conditions(self):
        """
        檢查是否需要切換到特殊狀態 (Mischief/Sleep)
        
        觸發條件：
        - Mischief: 高 Boredom + 負面 Mood 或極端 Pride
        - Sleep: 極高 Boredom + 長時間無互動
        """
        try:
            from core.status_manager import StatusManager
            status_manager = StatusManager()
            status = status_manager.get_status()
            current_time = time.time()
            
            # 檢查 Sleep 狀態條件（優先級較高）
            time_since_interaction = current_time - status.last_interaction_time
            sleep_threshold = 1800  # 30分鐘無互動
            
            if (status.boredom >= 0.8 and 
                time_since_interaction > sleep_threshold and 
                self._state in [UEPState.IDLE]):
                
                debug_log(2, f"[StateManager] Sleep 條件滿足: Boredom={status.boredom:.2f}, "
                         f"無互動時間={time_since_interaction/60:.1f}分鐘")
                self.set_state(UEPState.SLEEP, {
                    "trigger_reason": "high_boredom_and_inactivity",
                    "boredom_level": status.boredom,
                    "inactive_duration": time_since_interaction
                })
                return True
            
            # 檢查 Mischief 狀態條件
            mischief_conditions = [
                # 條件1: 高無聊 + 負面情緒
                (status.boredom >= 0.6 and status.mood <= -0.3),
                # 條件2: 極端自尊（過高或過低）+ 中等無聊
                (abs(status.pride) >= 0.7 and status.boredom >= 0.4),
                # 條件3: 低助人意願 + 負面情緒
                (status.helpfulness <= 0.3 and status.mood <= -0.2)
            ]
            
            if (any(mischief_conditions) and 
                self._state in [UEPState.IDLE, UEPState.CHAT]):
                
                debug_log(2, f"[StateManager] Mischief 條件滿足: Mood={status.mood:.2f}, "
                         f"Pride={status.pride:.2f}, Boredom={status.boredom:.2f}, "
                         f"Helpfulness={status.helpfulness:.2f}")
                self.set_state(UEPState.MISCHIEF, {
                    "trigger_reason": "negative_system_values",
                    "mood": status.mood,
                    "pride": status.pride,
                    "boredom": status.boredom,
                    "helpfulness": status.helpfulness
                })
                return True
                
            return False
            
        except Exception as e:
            debug_log(1, f"[StateManager] 檢查特殊狀態條件時發生錯誤: {e}")
            return False
    
    def _update_status_for_mischief(self):
        """更新 Mischief 狀態的系統數值"""
        try:
            from core.status_manager import StatusManager
            status_manager = StatusManager()
            
            # Mischief 狀態時，Helpfulness 變為負值
            status_manager.update_helpfulness(-1.0 - status_manager.get_status().helpfulness, 
                                            "進入搣蛋狀態，不提供協助")
            
            debug_log(2, "[StateManager] 已調整 Mischief 狀態的系統數值")
            
        except Exception as e:
            debug_log(1, f"[StateManager] 更新 Mischief 狀態數值失敗: {e}")
    
    def _trigger_mischief_behaviors(self, context: Optional[Dict[str, Any]] = None):
        """觸發 Mischief 狀態的特殊行為"""
        try:
            # TODO: 實作搗蛋行為邏輯
            # 例如：隨機動畫、音效、自主對話等
            debug_log(2, "[StateManager] Mischief 行為觸發 (待實作具體行為)")
            
        except Exception as e:
            debug_log(1, f"[StateManager] 觸發 Mischief 行為失敗: {e}")
    
    def _prepare_system_sleep(self, context: Optional[Dict[str, Any]] = None):
        """準備系統休眠"""
        try:
            # TODO: 實作系統資源釋放邏輯
            # 例如：暫停不必要的服務、清理快取等
            debug_log(2, "[StateManager] 準備系統休眠 (待實作資源釋放)")
            
        except Exception as e:
            debug_log(1, f"[StateManager] 準備系統休眠失敗: {e}")
    
    def _reduce_system_activity(self):
        """降低系統活動度"""
        try:
            # TODO: 實作降低系統活動的邏輯
            # 例如：降低監控頻率、暫停背景任務等
            debug_log(2, "[StateManager] 降低系統活動度 (待實作)")
            
        except Exception as e:
            debug_log(1, f"[StateManager] 降低系統活動度失敗: {e}")
    
    def _setup_status_integration(self):
        """設置與 StatusManager 的整合"""
        try:
            from core.status_manager import StatusManager
            status_manager = StatusManager()
            
            # 註冊狀態變化回調
            status_manager.register_update_callback(
                "state_manager", 
                self._on_status_update
            )
            
            debug_log(2, "[StateManager] StatusManager 整合設置完成")
            
        except Exception as e:
            debug_log(1, f"[StateManager] StatusManager 整合設置失敗: {e}")
    
    def _on_status_update(self, field: str, old_value: Any, new_value: Any, reason: str):
        """
        StatusManager 狀態更新回調
        當系統數值變化時檢查是否需要切換特殊狀態
        """
        try:
            debug_log(3, f"[StateManager] 收到狀態更新: {field} {old_value} -> {new_value} ({reason})")
            
            # 只在非特殊狀態時檢查特殊狀態條件
            if self._state not in [UEPState.MISCHIEF, UEPState.SLEEP]:
                # 延遲檢查，避免頻繁切換
                import threading
                threading.Timer(1.0, self.check_special_state_conditions).start()
                
        except Exception as e:
            debug_log(1, f"[StateManager] 處理狀態更新回調失敗: {e}")
    
    def exit_special_state(self, reason: str = ""):
        """
        退出特殊狀態 (Mischief/Sleep)
        回到 IDLE 狀態，並恢復正常數值
        """
        try:
            if self._state in [UEPState.MISCHIEF, UEPState.SLEEP]:
                old_state = self._state
                
                # 恢復系統數值
                if old_state == UEPState.MISCHIEF:
                    self._restore_helpfulness_after_mischief()
                elif old_state == UEPState.SLEEP:
                    self._restore_activity_after_sleep()
                
                # 回到 IDLE 狀態
                self.set_state(UEPState.IDLE, {"exit_reason": reason})
                
                debug_log(1, f"[StateManager] 退出 {old_state.name} 狀態: {reason}")
                
        except Exception as e:
            debug_log(1, f"[StateManager] 退出特殊狀態失敗: {e}")
    
    def _restore_helpfulness_after_mischief(self):
        """Mischief 狀態結束後恢復 Helpfulness"""
        try:
            from core.status_manager import StatusManager
            status_manager = StatusManager()
            
            # 恢復到正常的助人意願水平
            status_manager.update_helpfulness(0.8 - status_manager.get_status().helpfulness, 
                                            "結束搗蛋狀態，恢復協助意願")
            
            debug_log(2, "[StateManager] 已恢復 Mischief 後的 Helpfulness 數值")
            
        except Exception as e:
            debug_log(1, f"[StateManager] 恢復 Mischief 後數值失敗: {e}")
    
    def _restore_activity_after_sleep(self):
        """Sleep 狀態結束後恢復系統活動"""
        try:
            # TODO: 實作恢復系統活動的邏輯
            debug_log(2, "[StateManager] 恢復 Sleep 後的系統活動 (待實作)")
            
        except Exception as e:
            debug_log(1, f"[StateManager] 恢復 Sleep 後活動失敗: {e}")

    def on_event(self, intent: str, result: dict):
        """
        根據意圖與執行結果決定是否切換狀態。

        Args:
            intent: 意圖類型 (chat, command 等)
            result: 執行結果
        """
        # 簡單的狀態轉換邏輯
        if intent == "chat":
            self._state = UEPState.CHAT
        elif intent == "command":
            # 指令處理，視為工作狀態
            if result.get("status") == "success":
                self._state = UEPState.WORK
            else:
                self._state = UEPState.ERROR
        else:
            self._state = UEPState.IDLE


# 全局狀態管理器實例
state_manager = StateManager()
